src/objects/Badge_Claim__c.object
<CustomObject>
    <fields>
        <fullName>BC_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>BC Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Badge_Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badge Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Ext_Id__c</fullName>
        <label>Contact Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Badge Claims</relationshipLabel>
        <relationshipName>Badge_Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_City__c</fullName>
        <label>Town/City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Badge Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000000}</displayFormat>
        <label>Badge Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>